# baybridge

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  justfile  package-lock.json  package.json  shell.nix
.github/workflows/: docker.yml
src/: configuration.rs  crdt.rs  http_server.rs  lib.rs  main.rs
src/actions/: set.rs
src/api/: mod.rs  sync.rs  sync_events.rs
src/client/: actions.rs  events.rs  mod.rs  payloads.rs
src/connection/: connection.rs  http.rs
src/connectors/: connection.rs  http.rs
src/crypto/: encode.rs  key.rs  mod.rs  signed.rs
src/models/: hash.rs  immutable.rs  mod.rs  name.rs  namespace.rs  peer.rs  value.rs
src/server/: data_controller.rs  gc_expired.rs  http.rs  immutable_controller.rs  mod.rs  sqlite_controller.rs  sqlite_store.rs  task_controller.rs  templates.rs
src/server/tasks/: gc_expired.rs  mod.rs  sync.rs
templates/: dashboard.html
