[package]
name = "baybridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "baybridge"
path = "src/lib.rs"

[[bin]]
name = "baybridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
ecoji = "1.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "signature"] }
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_with = { version = "3.9.0", features = ["base64"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
