[package]
name = "baybridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "baybridge"
path = "src/lib.rs"

[[bin]]
name = "baybridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["serde", "serde-json", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
bincode = "1.3.3"
blake3 = { version = "1.5.4", features = ["rayon", "serde"] }
bon = "2.3.0"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "signature"] }
failsafe = "1.3.0"
futures = "0.3.31"
itertools = "0.13.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_with = { version = "3.9.0", features = ["base64"] }
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
built = { version = "0.7.4", features = ["chrono", "git2"] }
